--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "author": "Adrian <adrian@zyian.dev>",
   "license": "MIT",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "@fullhuman/postcss-purgecss": "^2.1.2",
+    "parcel-bundler": "^1.12.4",
+    "postcss-fontpath": "^1.0.0",
+    "postcss-modules": "^2.0.0",
+    "tailwindcss": "^1.3.5"
   },
   "scripts": {
-    "watch": "parcel public/index.html"
+    "watch": "parcel public/index.html",
+    "clean": "rm -rf dist .cache"
   },
   "dependencies": {
     "react": "^16.13.1",
