--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "author": "Adrian <adrian@zyian.dev>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
     "@fullhuman/postcss-purgecss": "^2.1.2",
     "parcel-bundler": "^1.12.4",
     "postcss-fontpath": "^1.0.0",
     "postcss-modules": "^2.0.0",
-    "tailwindcss": "^1.3.5",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "tailwindcss": "^1.3.5"
   },
   "scripts": {
     "start": "parcel public/index.html",
